Remove paint property node dependency from PaintLayer::FixedToViewport

PaintLayer::FixedToViewport does not need to query paint property nodes
and removing this requirement will let us call this function before
paint property nodes have been calculated.

When PaintLayer::FixedToViewport was first being implemented for a
composite-after-paint design (see: https://crrev.com/437051), this
function needed to use compositing information, which is why a paint
property approach was initially implemented.

Bug: 915372
Change-Id: I3d3cd193f64a11d7de8a86583a04a7743b2a49b4
Reviewed-on: https://chromium-review.googlesource.com/c/1379919
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617228}
Former-commit-id: 776edd1542cb89a2d37b02a9ffe0675511b23da7